<resources>
    <string name="app_name">Auto SMS Reader</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tts_settings">Text to Speech Settings</string>
    <string name="language_title">Language</string>
    <string name="language_summary">Select language for TTS</string>
    <string name="pitch_title">Pitch</string>
    <string name="pitch_summary">Set pitch for TTS</string>
    <string name="speed_title">Speed</string>
    <string name="speed_summary">Set speed for TTS</string>
    <string name="sms_reader_settings">SMS Reader Settings</string>
    <string name="filter_sender_title">Filter Sender</string>
    <string name="filter_sender_summary">Don\'t Read Messages From Selected Sender</string>
    <string name="filter_time_title">Filter time</string>
    <string name="filter_time_summary">Don\'t read messages for the following time interval</string>
    <string name="silent_mode_title">Play in silent mode</string>
    <string name="silent_mode_summary">Also play in silent mode(By default it plays only in general mode)</string>
    <string name="headset_title">Play only if headset connected</string>
    <string name="headset_summary">Will play only if earphones or bluetooth is connected.</string>
    <string name="shake_title">Enable shake to stop</string>
    <string name="shake_summary">Enable shaking the device to stop reading</string>
    <string name="reset_title">Reset</string>
    <string name="reset_summary">Reset all settings to default values</string>
    <string name="settings_actvity_title">Settings</string>
    <string name="time_activity_title">Time interval\'s</string>
    <string name="inbox_tab">INBOX</string>
    <string name="outbox_tab">OUTBOX</string>
    <string name="switch_on_toast">All incoming messages will be read loudly</string>
    <string name="switch_off_toast">Incoming sms reading disabled</string>
    <string name="permission_error">Give permissions to read sms</string>
    <string name="from_time">From:</string>
    <string name="to_time">To:</string>
    <string name="message_textView">Message:</string>
    <string name="stop_button">Stop</string>
    <string name="from_message">From:</string>
    <string name="tts_error">Feature not supported in your device</string>
    <string name="language_error">Language not available,Please download</string>
    <string name="tts_message_from">Message from:</string>
    <string name="tts_message_is">Message is</string>
    <string name="fetch">Fetching messages....</string>
    <string name="unknown_number">Unknown numbers</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="help_and_support"><![CDATA[Help & support]]></string>
    <string name="help">If you have a Samsung device with Android 6 and Smart Manager, do the following:

1. Go to your Smart Manager app and tap on ‘Battery’.

2. Under ‘App Power Saving’, tap ‘Details’.

3. Tap on ‘Auto SMS Reader’ and tap ‘Disable’.

If you have a Samsung device with Android 7, do the following:

1. Go to your device settings and tap ‘Device Maintenance’, then tap on ‘Battery’.

2. Scroll down and tap ‘Unmonitored apps’, then add Auto SMS Reader to this list.

3. Go to your phone’s Settings, tap “Applications”, tap “Application Manager”, then tap “Auto SMS Reader”.

4. Tap “Notifications”, enable “Allow Notifications”, then disable “Hide on lock screen”.

5. In Auto SMS Reader, tap ‘More’, tap ‘Settings’, ‘General Settings’, then tap ‘Refresh reminder times’ (under Time Zone Settings).

If you have a Samsung device with Android 8.0, do the following:

1. Open your phone’s Settings app, tap “Apps”.

2. Tap the three-dot icon in the top right corner, then tap “Special access”.

3. Tap “Optimize battery usage”, then tap “Apps not optimized”.

4. Select “All apps”, find Auto SMS Reader and disable it here.

5. Go to your device settings and tap ‘Device Maintenance’, then tap on ‘Battery’.

6. Scroll down and tap ‘Unmonitored apps’, then add Auto SMS Reader to this list.

7. Tap ‘Always Sleeping apps’ and make sure Auto SMS Reader is not listed there.

If you have a Zenfone device, do the following:

1. Go to your ‘Asus Mobile Manager’.

2. Turn on ‘Allow’ for Auto SMS Reader.

3. Go to your app launch manager and allow Auto SMS Reader.

4. Go to battery saving settings and exclude Auto SMS Reader.

5. Allow Auto SMS Reader to autostart in your device’s Autostart Manager.

If you have a Huawei device, do the following:

1. Go to ‘Privacy and Security’ in your device settings.

2. Add Auto SMS Reader to your ‘Protected Apps’.

3. Add Auto SMS Reader in your Startup apps.

4. Go to screen energy saver settings and allow Auto SMS Reader to interrupt the screen energy saver.

5. Go to battery settings, tap ‘Lock screen cleanup’ and exclude Auto SMS Reader.

6. Go to your ‘Settings’, tap ‘Apps’, then ‘Advanced’. Tap ‘Ignore Battery Optimizations’, find Auto SMS Reader and ignore it (not “Allow”).

If you have a Huawei device with Android 8.0 or higher , do the following:

1. Go to your phone Settings and tap ‘Apps &amp; Notifications’, ‘Apps’, ‘Auto SMS Reader’, ‘Battery’. Turn off ‘power intensive prompt’, then select ‘Launch’, turn off ‘Manage automatically’ and change it to ‘manually’.Then turn on ‘Auto-launch’, ‘Secondary launch’ and ‘Run in background’.

2. Go back to ‘Apps’, then tap the ‘Settings’ option at the bottom of the app list. Tap ‘Special access’, then ‘Ignore battery optimization’. Tap the arrow on the top right and choose ‘All apps’. Find Auto SMS Reader in the list of apps and choose ‘Allow’.

3. Go back to ‘Apps’, tap ‘Auto SMS Reader’, then tap ‘Notifications’. Turn on ‘Allow notifications’, ‘Display in status bar’, ‘Banners’, ‘Lock screen notifications’ and ‘Priority display’.

If you have a Xiaomi device, do the following:

1. Go to your device settings and tap ‘Additional Settings’.

2. Tap ‘Battery &amp; Performance’, ‘Manage Apps Battery Usage’, ‘Choose Apps’.

3. Tap on ‘Auto SMS Reader’ and choose ‘No Restrictions’.

4. Go to Settings, Permissions, Autostart (tap here). Turn on Autostart for Auto SMS Reader.

5. Go to your Power settings policy and allow Auto SMS Reader to wake up your device.

6. Open the apps, then press the “Recent Apps”/”App Overview” button (the square button or the button with three horizontal lines).

7. In “Recent Apps”/”App Overview”, find Auto SMS Reader, and pull down on it to “lock it”, so it never gets cleared.

If you have a OnePlus device, do the following:

1. Go to your device settings and tap ‘Battery’.

2. Tap ‘Battery Optimization’ from the top right menu icon.

3. Select all apps and disable ‘Auto SMS Reader’.

4. Go back to ‘Battery Optimization’, then go to ‘Advanced Optimization’ and disable it.

5. Go to your device settings and tap ‘Sound and Notification’.

6. Tap ‘App Notifications’ and tap on ‘Auto SMS Reader’.

7. Change Auto SMS Reader to ‘Priority’.

If you have a Leeco Le device:

1. Go to your Phone Manager and tap ‘Power Management’.

2. Tap ‘Protection Applications’ and add Auto SMS Reader to the protected applications.

3. Go to ‘Settings’, ‘Permissions’, ‘App Permissions’, ‘App List’, then ‘Auto SMS Reader’.

4. On the options near the bottom, find ‘Alert Window’ under ‘Others’ – set it to ‘Allowed’.

If you have an Oppo device:

1. Go to Settings and tap ‘Notification and status bar’.

2. Enable ‘Turn on screen for lockscreen notifications’.

3. Go back to ‘Notification panel &amp; status bar’ and tap ‘Notification Center’.

4. Find ‘Auto SMS Reader’, then activate ‘Allow Notifications’ and ‘Priority Display’.

5. Go to your phone’s ‘Settings’, ‘Advanced Settings’, ‘Battery Manager’, ‘Protected Apps’.

6. Find ‘Auto SMS Reader’, and ‘Protect’/’Whitelist’ it.

7. In your phone’s ‘Settings’, tap ‘Apps’, tap ‘Advanced’, tap ‘Ignore Battery Optimizations’.

8. Find ‘Auto SMS Reader’ and choose to ‘Ignore’ it.

You can also lock the apps to keep them running in the background:

1. Go to the apps overview (where you can see all the running apps).

2. Swipe down to lock or unlock Auto SMS Reader – when done correctly, you should see a lock icon on the upper left corner of the app.

If you have a Lenovo device:

1. Go into you phone’s Settings and tap “Apps”.

2. Find the app named “Background app management”.

3. Click on it and then select “Disable”.

If you have a Vivo device:

1. Set Auto SMS Reader in the white list for speedup.

2. Go to “Settings”, “Status bar and notification”, find “Auto SMS Reader”, turn on the “Allow notification”, “Show on lock screen”, “Badge desktop app icon” and the “Top preview” switches.

3. Please go to “Imanager”, “Power manager”, “Excessive background battery usage” and allow Auto SMS Reader to continue running when the background power consumption is high.

4. Please go to Settings, tap “More settings”, tap “Applications”, tap “Autostart”, then turn on the switch for “Auto SMS Reader”.</string>
    <string name="rate_us">Rate us !</string>
    <string name="contact_us">Contact us</string>
    <string name="email_subject">Auto SMS reader Feedback</string>
    <string name="email_intent">Send Feedback</string>
</resources>
