<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/tts_settings">
        <ListPreference
            android:title="@string/language_title"
            android:summary="@string/language_summary"
            android:key="language"
            android:defaultValue="1"
            android:entries="@array/language"
            android:entryValues="@array/language_val"/>
        <ListPreference
            android:title="@string/pitch_title"
            android:summary="@string/pitch_summary"
            android:key="pitch"
            android:defaultValue="3"
            android:entries="@array/pitch"
            android:entryValues="@array/pitch_val"/>
        <ListPreference
            android:title="@string/speed_title"
            android:summary="@string/speed_summary"
            android:key="speed"
            android:defaultValue="3"
            android:entries="@array/speed"
            android:entryValues="@array/speed_val"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sms_reader_settings">

        <com.shashank.autosmsreader.MultiSelectListPreferenceFix
            android:key="filter_sender"
            android:summary="@string/filter_sender_summary"
            android:title="@string/filter_sender_title" />

        <Preference
            android:title="@string/filter_time_title"
            android:key="filter_time"
            android:summary="@string/filter_time_summary"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="silent"
            android:title="@string/silent_mode_title"
            android:summary="@string/silent_mode_summary"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="headset"
            android:title="@string/headset_title"
            android:summary="@string/headset_summary"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="shake"
            android:title="@string/shake_title"
            android:summary="@string/shake_summary"/>

        <Preference
            android:title="@string/reset_title"
            android:key="resetButton"
            android:summary="@string/reset_summary"/>

    </PreferenceCategory>

</PreferenceScreen>