<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shashank.autosmsreader.MainActivity">

    <item
        android:id="@+id/switchId"
        android:title=""
        android:actionLayout="@layout/switch_layout"
        app:showAsAction="always" />


    <item android:id="@+id/settings"
        android:title="Settings"
        android:icon="@drawable/settings"
        app:showAsAction="always"></item>

    <item android:id="@+id/help"
        android:title="@string/help_and_support"/>

    <item android:id="@+id/rateUs"
        android:title="@string/rate_us"/>

    <item android:id="@+id/contactUs"
        android:title="@string/contact_us"/>
    <item android:id="@+id/privacyPolicy"
        android:title="Privacy policy"/>

</menu>
