<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textColor="#ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/senderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="From: Shashank Chandak"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:padding="3dp"
                android:textColor="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:textColor="#000000"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                android:text="@string/message_textView"/>

            <TextView
                android:id="@+id/messageBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:text="Just a random text message to see how this works."/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/stopButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/stop_button"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textAllCaps="false"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
